Update Gemma quick start notebook to use %pip for package installation and specify Python version in metadata

--- a/gemma_quickstart.ipynb
+++ b/gemma_quickstart.ipynb
@@ -36,11 +36,11 @@
    "outputs": [],
    "source": [
     "# Install Keras Hub and Keras 3\n",
-    "!pip install -q -U keras-hub\n",
-    "!pip install -q -U keras\n",
+    "%pip install -q -U keras-hub\n",
+    "%pip install -q -U keras\n",
     "\n",
     "# Optional: Install JAX backend (recommended for Gemma)\n",
-    "!pip install -q jax[cpu]"
+    "%pip install -q jax[cpu]"
    ]
   },
   {
@@ -474,8 +474,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
