Update setup notebook: Adjust execution counts, add output messages, and modify response text
- Changed execution counts for several code cells to reflect the correct order of execution.
- Added output messages for package installation and retry logic testing to provide user feedback.
- Modified the response text in the interaction cell for improved clarity.

--- a/notebooks/setup.ipynb
+++ b/notebooks/setup.ipynb
@@ -22,10 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "66ab2f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install Google AI and related packages\n",
     "%pip install -q google-generativeai google-ai-generativelanguage\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "5ef5c2da",
    "metadata": {},
    "outputs": [
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "e7a40071",
    "metadata": {},
    "outputs": [
@@ -96,7 +105,7 @@
      "output_type": "stream",
      "text": [
       "✓ Connection successful!\n",
-      "Response: Hello there! How can I help you today?\n",
+      "Response: Hello! How can I help you today?\n",
       "\n"
      ]
     }
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9d0d662a",
    "metadata": {},
    "outputs": [
@@ -314,10 +323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9ea0e5f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing retry logic with a simple prompt:\n",
+      "\n",
+      "✓ Success: Hello from retry logic!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from typing import Optional\n",
