Update AI Agents Course Notebook
- Set execution count to null for specific code cells to reset state.
- Added type ignore comment for Kaggle Secrets import to suppress type checking warnings.
- Changed Gemini model initialization from 'gemini-pro' to 'gemini-1.5-flash' for compatibility with v1beta API.
- Implemented a test for the model to verify successful API interaction and added error handling.
- Added optional code to list available Gemini models if the API key is set.

--- a/notebooks/ai_agents_course.ipynb
+++ b/notebooks/ai_agents_course.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "ea6bfc3b",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
    "source": [
     "# For Kaggle: Use Kaggle Secrets\n",
     "try:\n",
-    "    from kaggle_secrets import UserSecretsClient\n",
+    "    from kaggle_secrets import UserSecretsClient  # type: ignore\n",
     "    user_secrets = UserSecretsClient()\n",
     "    GOOGLE_API_KEY = user_secrets.get_secret(\"GOOGLE_API_KEY\")\n",
     "    print(\"✓ Using Kaggle Secrets\")\n",
@@ -173,7 +173,7 @@
     "    genai.configure(api_key=GOOGLE_API_KEY)\n",
     "    print(\"✓ Google AI API configured\")\n",
     "else:\n",
-    "    print(\"⚠ Warning: API key not found\")"
+    "    print(\"⚠ Warning: API key not found\")\n"
    ]
   },
   {
@@ -214,14 +214,38 @@
     "# (Complete actual codelabs on Kaggle where Gemma is fully supported)\n",
     "\n",
     "if GOOGLE_API_KEY:\n",
-    "    # Initialize Gemini model\n",
-    "    model = genai.GenerativeModel('gemini-pro')\n",
-    "    print(\"✓ Gemini Pro model initialized\")\n",
+    "    # Initialize Gemini model (using gemini-1.5-flash for v1beta API)\n",
+    "    model = genai.GenerativeModel('gemini-1.5-flash')\n",
+    "    print(\"✓ Gemini 1.5 Flash model initialized\")\n",
     "    print(\"  Use this for local experimentation\")\n",
     "    print(\"  Complete course codelabs on Kaggle!\")\n",
+    "    \n",
+    "    # Test the model\n",
+    "    try:\n",
+    "        response = model.generate_content(\"Say 'Hello, I'm ready to help with AI agents!'\")\n",
+    "        print(f\"\\n✓ Model test successful:\")\n",
+    "        print(f\"  {response.text}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\n⚠️ Model test failed: {e}\")\n",
+    "        print(\"  Check your API key or network connection\")\n",
     "else:\n",
     "    print(\"⚠️ Set up Google API key to use Gemini\")\n",
-    "    print(\"  Get one from: https://aistudio.google.com\")"
+    "    print(\"  Get one from: https://aistudio.google.com\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08ab68f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: List available Gemini models\n",
+    "if GOOGLE_API_KEY:\n",
+    "    print(\"Available Gemini models:\")\n",
+    "    for m in genai.list_models():\n",
+    "        if 'generateContent' in m.supported_generation_methods:\n",
+    "            print(f\"  • {m.name}\")\n"
    ]
   },
   {
